@@ -1,6 +1,14 @@
 \name{NEWS}
 \encoding{UTF-8}
 \title{News for Package \pkg{kSamples}}
+\section{Changes in version 1.2-10 (2023-10-07)}{
+	\subsection{Minor Reference Fixes}{
+		\itemize{
+			\item Fixed a reference to an older package version.
+			\item Updated the reference for "On Steel's Test with Ties."
+  		}
+	}
+}
 \section{Changes in version 1.2-8 (2018-06-02)}{
 	\subsection{Bug Removal}{
 		\itemize{
